<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.chembrovich.bsuir.posts.view.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/user_profile">

        <TextView
            android:id="@+id/user_post_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/post_id_background"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="#263238"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center|start"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/user_email"
            android:textColor="#1a237e"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/user_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/user_website"
            android:textColor="#1a237e"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/user_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/user_phone_number"
            android:textColor="#1a237e"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/user_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/user_city"
            android:textColor="#1a237e"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/save_to_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="5dp"
        android:background="@drawable/custom_button"
        android:text="@string/save_to_db"
        android:textColor="#eeeeee" />

</LinearLayout>
